# cpp_pow_blockchain

./: CMakeLists.txt  main.cpp
include/: Block.h  Blockchain.h
src/: Block.cpp  Blockchain.cpp
